--- a/src/client/ui/style.scss
+++ b/src/client/ui/style.scss
@@ -25,24 +25,11 @@ body {
     }
 
     .seat-colors {
-        background-color: maroon;
+        background-color: slategrey;
         color: white;
         border-radius: 6%;
         border: 0.25em solid black;
     }
-
-    .dutch {
-        h1 {
-            color: orange;
-        }
-    }
-
-    .scottish {
-        h1 {
-            color: dodgerblue;
-        }
-    }
-
 
     .table {
 
@@ -50,7 +37,7 @@ body {
         height: $table-height;
         width: $table-width;
         position: relative;
-        top: 150px;
+        top: 200px;
 
         .betting-line {
             background: transparent;
@@ -103,23 +90,25 @@ body {
                 text-align: center;
                 height: 1.5em;
                 line-height: 1.5em;
+                font-variant: small-caps;
             }
 
             .avatar {
                 height: 100px;
-                width: 100px;
-                background: tan;
+                width: 200px;
+                background: lightgrey;
                 border: 2px solid black;
             }
 
-            table {
-                height: 100%;
-                width: 100%;
-                border: none;
+            .cards {
+                text-align: center;
+                height: 4.2em;
+                width: 200px;
+                white-space: nowrap;
+                padding-bottom: 5px;
 
-                td {
-                    text-align: center;
-                    white-space: nowrap;
+                .card-small-2 + .card-small-2 {
+                    margin-left: -30px;
                 }
             }
         }
@@ -139,32 +128,32 @@ body {
 
                 &.seat-0 {
                     top: 400px;
-                    left: 20px;
+                    left: -60px;
                 }
 
                 &.seat-1 {
-                    top: 120px;
-                    left: -150px;
+                    top: 90px;
+                    left: -260px;
                 }
 
                 &.seat-2 {
-                    top: -160px;
-                    left: 20px;
+                    top: -220px;
+                    left: -60px;
                 }
 
                 &.seat-3 {
-                    top: -160px;
-                    left: 565px;
+                    top: -220px;
+                    left: 600px;
                 }
 
                 &.seat-4 {
-                    top: 120px;
+                    top: 90px;
                     left: 740px;
                 }
 
                 &.seat-5 {
-                    top: 400px;
-                    left: 565px;
+                    top: 390px;
+                    left: 580px;
                 }
             }
 
@@ -192,14 +181,12 @@ body {
 
                 &.seat-4 {
                     top: 160px;
-                    left: 600px;
-                    background: orange;
+                    left: 630px;
                 }
 
                 &.seat-5 {
                     top: 310px;
                     left: 500px;
-                    background: yellow;
                 }
             }
         }
@@ -249,6 +236,54 @@ body {
 
     .card-small + .card-small {
         margin-left: 10px;
+    }
+
+    .card-small-2 {
+        border: .2em solid black;
+        border-radius: 10%;
+        height: 4em;
+        width: 2.7em;
+        background-color: white;
+        position: relative;
+        display: inline-block;
+
+        &.face-down {
+            border: .2em solid white;
+            border-radius: 10%;
+            height: 4em;
+            width: 2.7em;
+            background-color: mediumblue;
+            position: relative;
+            display: inline-block;
+        }
+
+        .symbols {
+            text-align: center;
+            position: absolute;
+            font-size: 1em;
+            font-weight: bold;
+            line-height: 1em;
+
+            &.left {
+                top: 1px;
+                left: 3px;
+            }
+
+            &.right {
+                top: 28px;
+                right: 2px;
+                transform: rotate(180deg);
+            }
+
+            .value {
+                margin: 0;
+            }
+
+            .suit {
+                margin-top: -2px;
+                font-size: 1.25em;
+            }
+        }
     }
 }
 
