--- a/src/client/ui/style.scss
+++ b/src/client/ui/style.scss
@@ -86,6 +86,13 @@ body {
             padding: 3px;
             box-sizing: border-box;
 
+            &.action-on {
+
+                background-color: lightgreen;
+                color: black;
+
+            }
+
             .name, .chips {
                 text-align: center;
                 height: 1.5em;
@@ -94,7 +101,6 @@ body {
             }
 
             .avatar {
-
                 display: table;
                 box-sizing: border-box;
                 height: 100px;
@@ -109,8 +115,7 @@ body {
                     width: 100%;
                     margin: 0;
 
-                    .action
-                    {
+                    .action {
                         margin-left: auto;
                         margin-right: auto;
                         display: inline-block;
@@ -120,9 +125,7 @@ body {
                         color: black;
                         text-transform: uppercase;
                     }
-
                 }
-
             }
 
             .cards {
