Added transition when highlighting active seat

--- a/src/client/ui/style.scss
+++ b/src/client/ui/style.scss
@@ -90,6 +90,7 @@ body {
 
                 background-color: lightgreen;
                 color: black;
+                transition: background-color 0.25s, color 0.25s;
 
             }
 
