--- a/src/client/ui/components/card/card.scss
+++ b/src/client/ui/components/card/card.scss
@@ -1,68 +1,54 @@
-﻿.seat-colors {
-    background-color: slategrey;
-    color: white;
-    border-radius: 6%;
-    border: 0.25em solid black;
-}
+﻿.card-small-2 {
 
-.seat {
+    border: .2em solid black;
+    border-radius: 10%;
+    height: 4em;
+    width: 2.7em;
+    background-color: white;
+    position: relative;
+    display: inline-block;
 
-    @extend .seat-colors;
-    position: absolute;
-    padding: 3px;
-    box-sizing: border-box;
-
-    &.action-on {
-        background-color: lightgreen;
-        color: black;
-        transition: background-color 0.25s, color 0.25s;
+    &:not(.dealt)
+    {
+        top: 3000px;
+        transition: top 0.2s;
     }
 
-    .name, .chips {
+    &.face-down {
+        border: .2em solid white;
+        border-radius: 10%;
+        height: 4em;
+        width: 2.7em;
+        background-color: mediumblue;
+        position: relative;
+        display: inline-block;
+    }
+
+    .symbols {
         text-align: center;
-        height: 1.5em;
-        line-height: 1.5em;
-        font-variant: small-caps;
-    }
+        position: absolute;
+        font-size: 1em;
+        font-weight: bold;
+        line-height: 1em;
 
-    .avatar {
-        display: table;
-        box-sizing: border-box;
-        height: 100px;
-        width: 200px;
-        background: lightgrey;
-        border: 2px solid black;
+        &.left {
+            top: 1px;
+            left: 3px;
+        }
 
-        .action-container {
-            display: table-cell;
-            vertical-align: middle;
-            text-align: center;
-            width: 100%;
+        &.right {
+            top: 28px;
+            right: 2px;
+            transform: rotate(180deg);
+        }
+
+        .value {
             margin: 0;
+        }
 
-            .action {
-                margin-left: auto;
-                margin-right: auto;
-                display: inline-block;
-                padding: 5px 12px;
-                background: white;
-                border: 2px solid black;
-                color: black;
-                text-transform: uppercase;
-            }
+        .suit {
+            margin-top: -2px;
+            font-size: 1.25em;
         }
     }
-
-    .cards {
-        text-align: center;
-        height: 4.2em;
-        width: 200px;
-        white-space: nowrap;
-        padding-bottom: 5px;
-
-        .card-small-2 + .card-small-2 {
-            margin-left: -30px;
-        }
-    }
-
 }
