first version I think I am mostly happy with the dealing animation

--- a/src/client/ui/components/seat/seat.scss
+++ b/src/client/ui/components/seat/seat.scss
@@ -11,6 +11,7 @@
     position: absolute;
     padding: 3px;
     box-sizing: border-box;
+    height: 240px;
 
     &.action-on {
         background-color: lightgreen;
@@ -59,6 +60,7 @@
         width: 200px;
         white-space: nowrap;
         padding-bottom: 5px;
+        position: absolute;
 
         .card-small-2 + .card-small-2 {
             margin-left: -30px;
