--- a/src/client/ui/components/card/card.scss
+++ b/src/client/ui/components/card/card.scss
@@ -11,15 +11,14 @@
     &.dealer-holding
     {
         position: absolute;
-        top: 3000px;
     }
 
     &.dealing
     {
         position: absolute;
         top: 0;
-        left: 0;
-        transition: top 0.4s, left 0.4s;
+        left: 40%;
+        transition: top 0.2s, left 0.2s;
     }
 
     &.face-down {
