--- a/src/client/ui/components/card/card.scss
+++ b/src/client/ui/components/card/card.scss
@@ -18,7 +18,8 @@
         position: absolute;
         top: 0;
         left: 40%;
-        transition: top 0.2s, left 0.2s;
+        transition: top 0.15s, left 0.15s;
+        transition-timing-function: ease-out;
     }
 
     &.face-down {
