--- a/src/client/ui/components/card/card.scss
+++ b/src/client/ui/components/card/card.scss
@@ -1,57 +1,95 @@
-﻿.card-small-2 {
-
-    border: .2em solid black;
-    border-radius: 10%;
-    height: 4em;
-    width: 2.7em;
-    background-color: white;
-    position: relative;
+﻿.card {
     display: inline-block;
 
-    &.dealer-holding
-    {
+    .card-inner {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        /* controls how long it takes to flip the card over */
+        transition: transform 0.7s;
+        transform-style: preserve-3d;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+
+        .card-front, .card-back {
+            position: absolute;
+            -webkit-backface-visibility: hidden;
+            backface-visibility: hidden;
+            height: 100%;
+            width: 100%;
+        }
+
+        .card-back {
+            transform: rotateY(180deg);
+        }
+    }
+
+    &.face-down .card-inner {
+        transform: rotateY(180deg);
+    }
+}
+
+.card-small-2 {
+
+    .card-inner {
+        border: 1px solid black;
+        border-radius: 10%;
+        height: 4em;
+        width: 2.7em;
+        background-color: white;
+
+        .card-front {
+
+            .symbols {
+                text-align: center;
+                position: absolute;
+                font-size: 1em;
+                font-weight: bold;
+                line-height: 1em;
+
+                &.left {
+                    top: 1px;
+                    left: 3px;
+                }
+
+                &.right {
+                    top: 28px;
+                    right: 2px;
+                    transform: rotate(180deg);
+                }
+
+                .value {
+                    margin: 0;
+                }
+
+                .suit {
+                    margin-top: -2px;
+                    font-size: 1.25em;
+                }
+            }
+        }
+
+        .card-back {
+            border: 3px solid white;
+            border-radius: 10%;
+            background: rgb(2,0,36);
+            background: linear-gradient(15deg, rgba(2,0,36,1) 0%, rgba(41,140,186,1) 68%, rgba(0,212,255,1) 100%);
+            top: 0;
+            left: 0;
+            width: calc(100% - 6px);
+            height: calc(100% - 6px);
+        }
+    }
+
+
+    &.dealer-holding {
         position: absolute;
     }
 
-    &.dealing
-    {
+    &.dealing {
         position: absolute;
         top: 0;
         left: 40%;
         transition: top 0.3s, left 0.3s;
         transition-timing-function: ease-out;
-    }
-
-    &.face-down {
-        border: .2em solid white;
-        background-color: mediumblue;
-    }
-
-    .symbols {
-        text-align: center;
-        position: absolute;
-        font-size: 1em;
-        font-weight: bold;
-        line-height: 1em;
-
-        &.left {
-            top: 1px;
-            left: 3px;
-        }
-
-        &.right {
-            top: 28px;
-            right: 2px;
-            transform: rotate(180deg);
-        }
-
-        .value {
-            margin: 0;
-        }
-
-        .suit {
-            margin-top: -2px;
-            font-size: 1.25em;
-        }
     }
 }
