--- a/src/client/ui/components/bet/bet.scss
+++ b/src/client/ui/components/bet/bet.scss
@@ -8,7 +8,18 @@
     border-radius: 10%;
     padding: 0.25em 1.5em;
     background: tan;
+    
+    /* hide them at first and fade them in quickly */
+    opacity: 0;
 
     z-index: 2;
+
+    transition: opacity 0.25s;
+
+    &.announced {
+
+        opacity: 1;
+
+    }
 
 }
