WIP: Adding seatIndex to Bet class; adding GatherBetsAction to tell clients to move their chips - not quite working - working through duplicate key exception

--- a/src/client/ui/style-seats-6.scss
+++ b/src/client/ui/style-seats-6.scss
@@ -56,6 +56,13 @@
             &.seat-0 {
                 top: 350px;
                 left: 160px;
+
+                &.gathering {
+
+                    top: 200px;
+                    left: 300px;
+
+                }
             }
 
             &.seat-1 {
