Tweaked background of dealer box to not be so flat

--- a/src/client/ui/components/dealer/dealer-box.scss
+++ b/src/client/ui/components/dealer/dealer-box.scss
@@ -1,5 +1,5 @@
 ﻿.dealer-colors {
-    background-color: saddlebrown;
+    background: linear-gradient(105deg, #8b4513, #b5651d);
     color: white;
     border-radius: 6%;
     border: 0.25em solid black;
