Added Sitting Out message to SeatComponent

--- a/src/client/ui/components/seat/seat.scss
+++ b/src/client/ui/components/seat/seat.scss
@@ -82,5 +82,14 @@
         .card-small-2 + .card-small-2 {
             margin-left: -30px;
         }
+
+        .sitting-out
+        {
+            height: 4.2em;
+            line-height: 4.2em;
+            text-transform: uppercase;
+        }
+
     }
+
 }
