--- a/src/client/ui/table/table-menu/table-menu.scss
+++ b/src/client/ui/table/table-menu/table-menu.scss
@@ -16,4 +16,23 @@
         margin-left: 8px;
     }
 
+    .bet-actions
+    {
+        button 
+        { 
+            width: 80px;
+            height: 60px;
+
+            font-weight: bold;
+
+            .action,
+            .amount
+            {
+                text-align: center;
+            }
+
+        }
+
+    }
+
 }
