--- a/src/client/ui/table/timer/timer.scss
+++ b/src/client/ui/table/timer/timer.scss
@@ -15,6 +15,15 @@
     {
         height: 100%;
         background-color: green;
+
+    }
+
+    &.danger
+    {
+        .mercury
+        {
+            background-color: #b00;
+        }
     }
 
 }
