player cards are now highlighted on showdown as well; tweaked timing of showdown actions

--- a/src/client/ui/table/board/board.scss
+++ b/src/client/ui/table/board/board.scss
@@ -33,14 +33,17 @@
 
                 &.used {
                     margin-top: -5px;
-                    transition: margin-top 0.5s;
+                    transition: margin-top 0.25s;
                 }
 
                 &:not(.used) {
 
+                    opacity: 0.6;
+                    transition: opacity 0.25s;
+
                     .card-inner {
                         background-color: #999;
-                        transition: background-color 0.5s;
+                        transition: background-color 0.25s;
                     }
 
                 }
