--- a/src/client/ui/table/seat/seat.scss
+++ b/src/client/ui/table/seat/seat.scss
@@ -20,19 +20,15 @@
     }
 
     &.sitting-out {
-
         background: lightgrey;
         color: grey;
 
-        .name
-        {
+        .name {
             font-style: italic;
         }
-
     }
 
-    .name 
-    {
+    .name {
         font-size: 1.2em;
     }
 
@@ -79,17 +75,38 @@
         padding-bottom: 5px;
         position: absolute;
 
+        .card {
+            vertical-align: top;
+            margin-top: 0;
+        }
+
         .card-small-2 + .card-small-2 {
             margin-left: -30px;
         }
 
-        .sitting-out
-        {
+        .sitting-out {
             height: 4.2em;
             line-height: 4.2em;
             text-transform: uppercase;
         }
-
     }
 
+    &.showdown {
+
+        .cards {
+
+            .card {
+
+                &:not(.used) {
+
+                    margin-top: 8px;
+
+                    .card-inner {
+                        background-color: #999;
+                        transition: background-color 0.25s;
+                    }
+                }
+            }
+        }
+    }
 }
