Added ALL-IN message to replace player chips when all-in during the hand

--- a/src/client/ui/table/seat/seat.scss
+++ b/src/client/ui/table/seat/seat.scss
@@ -39,6 +39,14 @@
         font-variant: small-caps;
     }
 
+    .chips
+    {
+        &.all-in
+        {
+        }
+
+    }
+
     .avatar {
         display: table;
         box-sizing: border-box;
