--- a/src/client/components/table/table/table-seats-6.scss
+++ b/src/client/components/table/table/table-seats-6.scss
@@ -68,7 +68,7 @@
         left: 300px;
     }
 
-    .chips-stage,
+    .chips-stage.bet,
     .pot.pushed {
 
         &.seat-0 {
@@ -101,6 +101,40 @@
             left: 490px;
         }
     }
+
+    .chips-stage.ante {
+
+        &.seat-0 {
+            top: 300px;
+            left: 160px;
+        }
+
+        &.seat-1 {
+            top: 200px;
+            left: 80px;
+        }
+
+        &.seat-2 {
+            top: 90px;
+            left: 140px;
+        }
+
+        &.seat-3 {
+            top: 90px;
+            left: 500px;
+        }
+
+        &.seat-4 {
+            top: 200px;
+            left: 575px;
+        }
+
+        &.seat-5 {
+            top: 300px;
+            left: 490px;
+        }
+    }
+
 
     .button {
 
