changed chips to use display: grid; changed bet font-weight to normal

--- a/src/client/components/table/bet/bet.scss
+++ b/src/client/components/table/bet/bet.scss
@@ -1,22 +1,19 @@
 ﻿.chips-stage {
+
     display: inline-block;
-    color: black;
-    font-weight: bold;
+    color: white;
     position: absolute;
     text-align: center;
     border-radius: 10%;
 
     &.bet {
-        border: 2px solid black;
-        background: tan;
         padding: 0.25em 1.5em;
     }
 
     &.ante {
-        border: 1px solid black;
-        background: white;
         padding: 0.25em 0.5em;
     }
+
     /* hide them at first and fade them in quickly */
     opacity: 0;
     z-index: 2;
@@ -30,5 +27,8 @@
         transition: top 0.5s, left 0.5s;
     }
 
+    .amount {
+        margin-top: 2px;
+    }
 
 }
