--- a/src/client/components/table/chips/chip-box.scss
+++ b/src/client/components/table/chips/chip-box.scss
@@ -1,6 +1,7 @@
 ﻿.chip-box {
 
-    display: inline-block;
+    display: grid;
+
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -9,11 +10,6 @@
 
     padding: 0;
     margin: 0;
-
-    .poker-chip + .poker-chip
-    {
-        margin-top: -5px;
-    }
 
 }
 
