--- a/src/client/components/table/chips/chip.scss
+++ b/src/client/components/table/chips/chip.scss
@@ -1,11 +1,11 @@
 ﻿.poker-chip {
 
-    position: absolute;
-    display: inline-block;
+    display: block;
 
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
+
     width: 25px;
     height: 25px;
     background: #555;
