Added chip-box-component to PotComponent and WonPotComponent

--- a/src/client/components/table/pot/pot.scss
+++ b/src/client/components/table/pot/pot.scss
@@ -2,7 +2,7 @@
     color: white;
     position: absolute;
 
-    .name, .chips {
+    .name, .amount {
         text-align: center;
         height: 1.5em;
         line-height: 1.5em;
