--- a/src/client/components/table/chips/chip-box.scss
+++ b/src/client/components/table/chips/chip-box.scss
@@ -1,6 +1,8 @@
 ﻿.chip-box {
 
     display: grid;
+    justify-items: center;
+    justify-content: space-evenly;
 
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
