--- a/src/client/table/components/card/card.scss
+++ b/src/client/table/components/card/card.scss
@@ -1,8 +1,6 @@
-﻿$card-font: "Times New Roman", serif;
-$spade-color: black;
-$club-color: black;
-$heart-color: red;
-$diamond-color: red;
+﻿@import "../../../styles/cards";
+
+$card-font: "Times New Roman", serif;
 
 .card {
 
@@ -37,19 +35,19 @@ $diamond-color: red;
 }
 
 .spade {
-    color: $spade-color;
+    @include spade;
 }
 
 .club {
-    color: $club-color;
+    @include club;
 }
 
 .heart {
-    color: $heart-color;
+    @include heart;
 }
 
 .diamond {
-    color: $diamond-color;
+    @include diamond;
 }
 
 .card-small {
@@ -136,16 +134,30 @@ $diamond-color: red;
     }
 
 
-    &.dealer-holding, &.mucked {
+    &.dealer-holding, &.dealing, &.player-holding, &.mucking {
         position: absolute;
     }
 
+    /* this is for when the card is *NEAR* the player's hand but not quite in it */
+    &.dealing {
+        /* we need values for top & left so that it does the animation - without them the card just jumps straight there */
+        top: 0;
+        left: 40%;
+    }
+    /* this is for when the card is *NEAR* the player's hand but not quite in it */
+    &.player-holding {
+        /* we need values for top & left so that it does the animation - without them the card just jumps straight there */
+        top: 0;
+        left: 40%;
+    }
+
+    /* specify the transition for the second state (ending up in the player's hand, ending up in the muck) */
     &.dealing, &.mucking {
-        position: absolute;
         transition: top 0.3s, left 0.3s;
         transition-timing-function: ease-out;
     }
 
-
-
+    &.mucked {
+        display: none;
+    }
 }
