--- a/src/client/table/components/table/table-seats-6.scss
+++ b/src/client/table/components/table/table-seats-6.scss
@@ -6,7 +6,7 @@
             top: 400px;
             left: -60px;
 
-            .dealer-holding, .mucking {
+            .dealing, .mucked {
                 top: -60px;
                 left: 420px;
             }
@@ -16,7 +16,7 @@
             top: 90px;
             left: -260px;
 
-            .dealer-holding, .mucking {
+            .dealing, .mucked {
                 top: 250px;
                 left: 620px;
             }
@@ -26,7 +26,7 @@
             top: -220px;
             left: -60px;
 
-            .dealer-holding, .mucking {
+            .dealing, .mucked {
                 top: 560px;
                 left: 420px;
             }
@@ -36,7 +36,7 @@
             top: -220px;
             left: 600px;
 
-            .dealer-holding, .mucking {
+            .dealing, .mucked {
                 top: 560px;
                 left: -240px;
             }
@@ -46,7 +46,7 @@
             top: 90px;
             left: 740px;
 
-            .dealer-holding, .mucking {
+            .dealing, .mucked {
                 top: 250px;
                 left: -380px;
             }
@@ -56,7 +56,7 @@
             top: 390px;
             left: 580px;
 
-            .dealer-holding, .mucking {
+            .dealing, .mucked {
                 top: -50px;
                 left: -220px;
             }
