added FoldingComponent so that the cards fly towards the dealer

--- a/src/client/table/components/seat/seat.scss
+++ b/src/client/table/components/seat/seat.scss
@@ -79,7 +79,6 @@
     }
 
     .hand {
-
         text-align: center;
         height: 4.2em;
         width: 200px;
@@ -92,7 +91,21 @@
             line-height: 4.2em;
             text-transform: uppercase;
         }
+    }
 
+    .mucked {
+        text-align: center;
+        height: 4.2em;
+        width: 200px;
+        white-space: nowrap;
+        padding-bottom: 5px;
+        position: absolute;
+
+        .sitting-out {
+            height: 4.2em;
+            line-height: 4.2em;
+            text-transform: uppercase;
+        }
     }
 
 }
