Done with animations for cards (for now)

--- a/src/client/table/components/card/card.scss
+++ b/src/client/table/components/card/card.scss
@@ -43,6 +43,12 @@ $card-font: "Times New Roman", serif;
 */
     }
 
+    &.showdown:not(.used) {
+        opacity: 0.5;
+        transition: opacity 0.25s;
+    }
+
+
     &.folding {
         animation-name: spin;
         animation-duration: 200ms;
