--- a/src/client/table/components/betting-menu/betting-menu.scss
+++ b/src/client/table/components/betting-menu/betting-menu.scss
@@ -8,24 +8,13 @@
     width: 300px;
     height: 100px;
 
-    button + button {
-        margin-left: 8px;
-    }
-
     .bet-actions {
-        button {
 
-            width: 80px;
-            height: 60px;
-            font-weight: bold;
-            vertical-align: top;
-            text-align: center;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
 
-            .action + .amount
-            {
-                margin-top: 4px;
-            }
-
-        }
     }
+
 }
