added basic animation where chips fly to player

--- a/src/client/table/components/chips/chip-box.scss
+++ b/src/client/table/components/chips/chip-box.scss
@@ -1,8 +1,6 @@
 ﻿.chip-box {
 
-    display: grid;
-    justify-items: center;
-    justify-content: space-evenly;
+    display: block;
 
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
