--- a/src/client/table/components/betting-menu/betting-menu.scss
+++ b/src/client/table/components/betting-menu/betting-menu.scss
@@ -2,7 +2,7 @@
     border: 2px solid black;
     background-color: lightgrey;
     padding: 5px;
-    overflow-y: scroll;
+    overflow-y: auto;
     position: absolute;
     top: 220px;
     width: 300px;
@@ -11,9 +11,14 @@
     .bet-actions {
 
         width: 100%;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
+
+        .buttons {
+
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+        }
 
     }
 
