--- a/src/client/table/components/table-menu/table-menu.scss
+++ b/src/client/table/components/table-menu/table-menu.scss
@@ -5,7 +5,7 @@
     border: 2px solid black;
     background-color: lightgrey;
     padding: 5px;
-    overflow-y: scroll;
+    overflow-y: auto;
     position: absolute;
     top: 100px;
     width: 300px;
