added slight delay to spin when folding

--- a/src/client/table/components/card/card.scss
+++ b/src/client/table/components/card/card.scss
@@ -54,6 +54,7 @@ $card-font: "Times New Roman", serif;
         animation-duration: 200ms;
         animation-iteration-count: infinite;
         animation-timing-function: ease-in;
+        animation-delay: 300ms;
         /* transform: rotate(3deg); */
         /* transform: rotate(0.3rad);/ */
         /* transform: rotate(3grad); */
