--- a/src/views/table/components/table-menu/table-menu.scss
+++ b/src/views/table/components/table-menu/table-menu.scss
@@ -1,7 +1,6 @@
 ﻿@import "../../../../styles/buttons";
 
 .table-menu {
-
     border: 2px solid black;
     background-color: lightgrey;
     padding: 5px;
@@ -11,46 +10,64 @@
     width: 300px;
     height: 100px;
 
-    button + button {
-        margin-left: 8px;
-    }
+    .table-actions {
 
-    button {
-
-        width: 100px;
-        font-weight: bold;
-        vertical-align: top;
-        text-align: center;
-
-        .action + .amount
-        {
-            margin-top: 4px;
+        button + button {
+            margin-left: 8px;
         }
 
-        &.stand-up
-        {
-            background-color: red;
-            color: white;
-        }
-
-        &.buy-in
-        {
-            @include good-button;
-        }
-
-    }
-
-    .add-chips-dialog
-    {
-        div
-        {
+        button {
+            width: 100px;
+            font-weight: bold;
+            vertical-align: top;
             text-align: center;
 
-            &.buy-amount
-            {
-                font-weight: bold;
+            .action + .amount {
+                margin-top: 4px;
             }
 
+            &.stand-up {
+                background-color: red;
+                color: white;
+            }
+
+            &.buy-in {
+                @include good-button;
+            }
+        }
+    }
+
+    .add-chips-dialog {
+
+        text-align: center;
+
+        &.buy-amount {
+            font-weight: bold;
+        }
+
+        .chips-slider {
+            vertical-align: middle;
+        }
+
+        .min-buy-in,
+        .max-buy-in
+        {
+            vertical-align: bottom;
+        }
+
+        .min-buy-in {
+            margin-right: 10px;
+        }
+
+        .max-buy-in {
+            margin-left: 10px;
+        }
+
+        .buttons {
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
         }
 
     }
