--- a/src/views/table/components/table-menu/table-menu.scss
+++ b/src/views/table/components/table-menu/table-menu.scss
@@ -10,7 +10,31 @@
     width: 300px;
     height: 100px;
 
+    .table-name
+    {
+        .name-row
+        {
+            .name
+            {
+                font-weight: bold;
+                font-variant: small-caps;
+            }
+
+            .id
+            {
+                font-style: italic;
+            }
+        }
+
+        .description
+        {
+            margin-top: 3px;
+        }
+    }
+
     .table-actions {
+
+        margin-top: 5px;
 
         button + button {
             margin-left: 8px;
