--- a/src/views/table/components/card/card.scss
+++ b/src/views/table/components/card/card.scss
@@ -1,6 +1,7 @@
 ﻿@import "../../../../styles/cards";
 
-$card-font: "Times New Roman", serif;
+// $card-font: "Times New Roman", serif;
+$card-font: sans-serif;
 
 .card {
     display: inline-block;
@@ -105,7 +106,7 @@ $card-font: "Times New Roman", serif;
         margin-top: 0.12em;
         text-align: center;
         font-size: 1.5em;
-        font-weight: bold;
+        font-weight: normal;
         padding: 0;
         line-height: 1em;
     }
@@ -138,7 +139,7 @@ $card-font: "Times New Roman", serif;
                 text-align: center;
                 position: absolute;
                 font-size: 1em;
-                font-weight: bold;
+                font-weight: normal;
                 line-height: 1em;
 
                 &.left {
@@ -158,7 +159,7 @@ $card-font: "Times New Roman", serif;
 
                 .suit {
                     margin-top: -2px;
-                    font-size: 1.25em;
+                    /* font-size: 1.25em; */
                 }
             }
         }
@@ -174,6 +175,4 @@ $card-font: "Times New Roman", serif;
             height: calc(100% - 6px);
         }
     }
-
-
 }
